# Meno-Web

./: .gitignore  README.md  eslint.config.js  example.env  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_web.sh  server.js  start.sh  vite.config.js  vitest.config.js
.claude/: launch.json
.github/workflows/: ci.yml
src/: App.css  App.jsx  App.test.jsx  i18n.js  i18n.test.js  index.css  main.jsx  test-setup.js
src/components/: AppRoutes.jsx  AppRoutes.test.jsx  ArenaMessageBubble.test.jsx  AuthModal.css  AuthModal.jsx  AuthModal.test.jsx  ChatArea.css  ChatArea.jsx  ChatArea.test.jsx  ChatInput.css  ChatInput.jsx  ChatInput.test.jsx  ConsentBanner.css  ConsentBanner.jsx  ConsentBanner.test.jsx  ConsentGate.css  ConsentGate.jsx  ConsentGate.test.jsx  ConsentModal.css  ConsentModal.jsx  ConsentModal.test.jsx  Leaderboard.css  Leaderboard.jsx  Leaderboard.test.jsx  LegalDocument.css  LegalDocument.jsx  LegalDocument.test.jsx  LegalDocumentView.css  LegalDocumentView.jsx  LegalDocumentView.test.jsx  LegalLinks.css  LegalLinks.jsx  LegalLinks.test.jsx  LegalPage.css  LegalPage.jsx  LegalPage.test.jsx  MessageFeedback.css  MessageFeedback.jsx  MessageFeedback.test.jsx  PrivacySettingsModal.css  (+19 more)
src/services/: api.abort.test.js  api.js  api.privacy.test.js  api.test.js  arenaHistory.js  arenaHistory.test.js  arenaMatching.js  arenaMatching.test.js  chatNotice.js  chatNotice.test.js  chatTurns.js  chatTurns.test.js  chatWaitState.js  chatWaitState.test.js  consentGate.js  logger.js  (+9 more)
static/: style.css
templates/: chat.html
(+23 files in other folders)
